[gd_scene load_steps=14 format=2]

[ext_resource path="res://Sprites/walkenemy.png" type="Texture" id=1]
[ext_resource path="res://Scenes/Enemy.gd" type="Script" id=2]
[ext_resource path="res://Sounds/death.ogg" type="AudioStream" id=3]
[ext_resource path="res://Sprites/alert.png" type="Texture" id=4]
[ext_resource path="res://Animations/ScenesAlert.tres" type="Animation" id=5]
[ext_resource path="res://Sprites/enemyidle.png" type="Texture" id=6]
[ext_resource path="res://Sounds/alert.ogg" type="AudioStream" id=7]
[ext_resource path="res://Sprites/death.png" type="Texture" id=8]

[sub_resource type="RectangleShape2D" id=1]

[sub_resource type="CircleShape2D" id=2]

[sub_resource type="Animation" id=3]
resource_name = "Death"
length = 0.8
step = 0.05
tracks/0/type = "value"
tracks/0/path = NodePath("CollisionShape2D:disabled")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ true ]
}
tracks/1/type = "method"
tracks/1/path = NodePath(".")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0.55 ),
"transitions": PoolRealArray( 1 ),
"values": [ {
"args": [  ],
"method": "queue_free"
} ]
}
tracks/2/type = "value"
tracks/2/path = NodePath("Walking:visible")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ false ]
}
tracks/3/type = "audio"
tracks/3/path = NodePath("DeathSound")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/keys = {
"clips": [ {
"end_offset": 0.0,
"start_offset": 0.0,
"stream": ExtResource( 3 )
} ],
"times": PoolRealArray( 0 )
}
tracks/4/type = "value"
tracks/4/path = NodePath("Death:frame")
tracks/4/interp = 1
tracks/4/loop_wrap = true
tracks/4/imported = false
tracks/4/enabled = true
tracks/4/keys = {
"times": PoolRealArray( 0, 0.1, 0.2, 0.3 ),
"transitions": PoolRealArray( 1, 1, 1, 1 ),
"update": 1,
"values": [ 0, 1, 2, 3 ]
}
tracks/5/type = "value"
tracks/5/path = NodePath("Death:visible")
tracks/5/interp = 1
tracks/5/loop_wrap = true
tracks/5/imported = false
tracks/5/enabled = true
tracks/5/keys = {
"times": PoolRealArray( 0, 0.45 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 1,
"values": [ true, false ]
}

[sub_resource type="Animation" id=4]
resource_name = "Idle"
length = 0.35
tracks/0/type = "value"
tracks/0/path = NodePath("Idle:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.1, 0.2, 0.3 ),
"transitions": PoolRealArray( 1, 1, 1, 1 ),
"update": 1,
"values": [ 0, 1, 2, 3 ]
}

[sub_resource type="Animation" id=5]
resource_name = "Walk"
length = 0.2
step = 0.05
tracks/0/type = "value"
tracks/0/path = NodePath("Walking:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.05, 0.1, 0.15 ),
"transitions": PoolRealArray( 1, 1, 1, 1 ),
"update": 1,
"values": [ 0, 1, 2, 3 ]
}

[node name="Enemy" type="KinematicBody2D"]
script = ExtResource( 2 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
scale = Vector2( 4.68501, 9.10429 )
shape = SubResource( 1 )

[node name="DetectionArea" type="Area2D" parent="."]
scale = Vector2( 0.783571, 0.783571 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="DetectionArea"]
scale = Vector2( 51.6683, 28.1332 )
shape = SubResource( 2 )

[node name="HitArea" type="Area2D" parent="."]
visible = false
scale = Vector2( 4.68501, 9.10429 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="HitArea"]
shape = SubResource( 1 )

[node name="Idle" type="Sprite" parent="."]
texture = ExtResource( 6 )
vframes = 2
hframes = 2

[node name="Walking" type="Sprite" parent="."]
visible = false
texture = ExtResource( 1 )
vframes = 2
hframes = 2

[node name="Death" type="Sprite" parent="."]
texture = ExtResource( 8 )
vframes = 2
hframes = 2

[node name="DeathSound" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 3 )
volume_db = -10.0
pitch_scale = 1.5

[node name="AlertSound" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 7 )
volume_db = -10.0

[node name="AlertTimer" type="Timer" parent="."]
wait_time = 0.7

[node name="AlertPlayer" type="AnimationPlayer" parent="."]
anims/Alert = ExtResource( 5 )

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
anims/Death = SubResource( 3 )
anims/Idle = SubResource( 4 )
anims/Walk = SubResource( 5 )

[node name="Alert" type="Sprite" parent="."]
position = Vector2( 8.97968, -143.675 )
scale = Vector2( 0.538617, 0.538617 )
texture = ExtResource( 4 )
vframes = 2
hframes = 2
[connection signal="timeout" from="AlertTimer" to="." method="_on_AlertTimer_timeout"]
